shared/src/test/data/yeast/invalid-json/map-with-scalar.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'Deleted Successfully (not actually)'
Indicator          40,  2, 38 '\"'
EndScalar          41,  2, 39 ''
LineBreak          41,  2, 39 '\n'
EndMapping         42,  3,  0 '}'